--- a/test.html
+++ b/test.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>My Website</title>
+	<title>My Collection</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	I am a web developer 
+	I am a web developer ..hey i am lekhana..how u doing
 	<script src="script.js"></script>
 
 </body>
